 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS
 
BUG FIXES



Release 0.14.0 - Unreleased
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4039: New interface for resetting static variables for jvm reuse (rohini)

PIG-3870: STRSPLITTOBAG UDF (cryptoe via daijy)

PIG-4080: Add Preprocessor commands and more to the black/whitelisting feature (prkommireddi via daijy)

PIG-4162: Intermediate reducer parallelism in Tez should be higher (rohini)

PIG-4186: Fix e2e run against new build of pig and some enhancements (rohini)

PIG-3838: Organize tez code into subpackages (rohini)

PIG-4069: Limit reduce task should start as soon as one map task finishes (rohini)

PIG-4141: Ship UDF/LoadFunc/StoreFunc dependent jar automatically (daijy)

PIG-4146: Create a target to run mr and tez unit test in one shot (daijy)

PIG-4144: Make pigunit.PigTest work in tez mode (daijy)

PIG-4128: New logical optimizer rule: ConstantCalculator (daijy)

PIG-4124: Command for Python streaming udf should be configurable (cheolsoo)

PIG-4114: Add Native operator to tez (daijy)

PIG-4117: Implement merge cogroup in Tez (daijy)

PIG-4119: Add message at end of each testcase with timestamp in Pig system tests (nmaheshwari via daijy)

PIG-4008: Pig code change to enable Tez Local mode (airbots via daijy)

PIG-4091: Predicate pushdown for ORC (rohini via daijy)

PIG-4077: Some fixes and e2e test for OrcStorage (rohini)

PIG-4054: Do not create job.jar when submitting job (daijy)

PIG-4047: Break up pig withouthadoop and fat jar (daijy)

PIG-4062: Add ascending order option to builtin TOP function (raj171 via cheolsoo)

PIG-3558: ORC support for Pig (daijy)

PIG-2122: Parameter Substitution doesn't work in the Grunt shell (daijy)

PIG-4031: Provide Counter aggregation for Tez (daijy)
